<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/shop_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop_name"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/linear_bg_dotted" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/landmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/landmark"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/area_pin_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area_pin_code"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/linear_bg_dotted" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:id="@+id/order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order"
                    android:textColor="@android:color/black"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/invoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/invoice"
                    android:textColor="@android:color/black"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/date"
                    android:textColor="@android:color/black"
                    android:textStyle="bold|italic" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:id="@+id/phone_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_no"
                    android:textColor="@android:color/black"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/purchase_delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/purchase_delivery"
                    android:textColor="@android:color/black"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/time"
                    android:textColor="@android:color/black"
                    android:textStyle="bold|italic" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/linear_bg_dotted" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/items_list" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/sub_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_total"
                android:textColor="@android:color/black"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/price"
                android:textColor="@android:color/black"
                android:textStyle="bold|italic" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/gst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gst"
                android:textColor="@android:color/black"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/tax"
                android:textColor="@android:color/black"
                android:textStyle="bold|italic" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="5dp"
                    android:background="@drawable/linear_bg_dotted" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@drawable/linear_bg_dotted" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/amount_payable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount_payable"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="123"
                android:textColor="@android:color/black"
                android:textStyle="bold|italic" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/payment_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_method"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="123"
                android:textColor="@android:color/black"
                android:textStyle="bold|italic" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount_payable"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="123"
                android:textColor="@android:color/black"
                android:textStyle="bold|italic" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="5dp"
                    android:background="@drawable/linear_bg_dotted" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@drawable/linear_bg_dotted" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="123"
                android:textColor="@android:color/black"
                android:textStyle="bold|italic" />
        </RelativeLayout>

        <!-- Thank You Message -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp">

            <TextView
                android:id="@+id/thank_you"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thank_you"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
